--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <li><a href="composing.html">Composing</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+
+      <ul class="slideshow">
+        <li> <span>Slide One</span> </li>
+        <li> <span>Slide Two</span> </li>
+        <li> <span>Slide Three</span> </li>
+        <li> <span>Slide Four</span> </li>
+        <li> <span>Slide Five</span> </li>
+        <li> <span>Slide Six</span> </li>
+        <li> <span>Slide Seven</span> </li>
+      </ul>
   </body>
 </html>
 
